# SCANet

./: LICENSE  README.md  pyproject.toml
docs/: MAIN.ipynb  detailed-example-3kPBMCs.ipynb  full-example.ipynb
scannet/: __init__.py
src/: __init__.py  arboreto_with_multiprocessing2.py  coexpression.py  download_db.py  drug_interactions.py  grn.py  plotting.py  plottingNetworks.py  preprocessing.py  pseudobulk.py  script.R
src/scanet/: __init__.py  coexpression.py  conv.py  download_db.py  drug_interactions.py  grn.py  infer_grn.py  plotting.py  plottingNetworks.py  preprocessing.py  pseudobulk.py  script.R
