[tool.poetry]
name = "scannet"
version = "0.1.1"
description = "A package for creating GRNs and GCNs from single-cell data"
authors = [
  "Mhaned Oubounyt <mhaned.oubounyt@uni-hamburg.de>",
]
license = "file=\"LICENSE\""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
bokeh = "2.4.3"
ipykernel = "6.11.0"
pip-chill = "1.0.1"
pyscenic = "0.11.2"
rpy2 = "3.4.5"
scanpy = "^1.8.2"
sklearn = "^0.0"
drugstone = "^0.2.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
